# ae2-env

./: .gitignore  Dockerfile  README.md  app.py  baseline_results.json  client.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  sandbox.py  task_loader.py
server/: app.py
tasks/data_eng_easy_001/: task.json  tests.json
tasks/data_eng_hard_001/: task.json  tests.json
tasks/data_eng_medium_001/: task.json  tests.json
tasks/deploy_easy_001/: task.json  tests.json
tasks/deploy_hard_001/: task.json  tests.json
tasks/deploy_medium_001/: task.json  tests.json
tasks/eval_easy_001/: task.json  tests.json
tasks/eval_hard_001/: task.json  tests.json
tasks/eval_medium_001/: task.json  tests.json
tasks/model_ops_easy_001/: task.json  tests.json
tasks/model_ops_hard_001/: task.json  tests.json
tasks/model_ops_medium_001/: task.json  tests.json
tasks/nlp_easy_001/: task.json  tests.json
tasks/nlp_hard_001/: task.json  tests.json
tasks/nlp_medium_001/: task.json  tests.json
