[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ae2-applied-ai-engineering"
version = "1.0.0"
description = "AE² is a benchmark environment for training and evaluating AI agents on real-world Applied AI Engineering tasks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Sudhanshu Saini" },
  { name="Tanmay" }
]
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "numpy",
    "scikit-learn",
    "transformers",
    "datasets",
    "requests",
    "openai"
]

[project.scripts]
# Ensure this exactly matches the function name in server/app.py
ae2-server = "server.app:main"

[tool.setuptools]
# This ensures that both the root files and the server folder are recognized
packages = ["server"]