[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ae2-applied-ai-engineering"
version = "1.0.0"
description = "AE² is a benchmark environment for training and evaluating AI agents on real-world Applied AI Engineering tasks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Sudhanshu Saini" },
  { name="Tanmay" }
]
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "numpy",
    "scikit-learn",
    "transformers",
    "datasets",
    "requests",
    "openai"
]

[project.scripts]
# The validator often looks for 'ae2-server' or 'server'
# We will define both to be safe
ae2-server = "server.app:main"
server = "server.app:main"

[tool.setuptools]
packages = ["server"]